Basic and intirative ui finished. Now everyone can use the boxes and should be able to start filling in their website.

--- a/portfolio/Portfolio-Camiel-Nijman.html
+++ b/portfolio/Portfolio-Camiel-Nijman.html
@@ -1,95 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfolio Camiel Nijman</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-    </head>
-    <body>
-        <div class="nav-container">
-            <header>
-                <a href="index.html" class = "logo">Minor Smart Industry</a>
-                <nav>
-                    <a href="Portfolio-Project.html">Project</a>
-                    <a href="#" class="active">Camiel Nijman</a>
-                    <a href="Portfolio-Nathan-van-der-Veer.html">Nathan van der Veer</a>
-                    <a href="Portfolio-Nena-Renting.html">Nena Renting</a>
-                </nav>
-            </header>
-            <div class="sidenav">
-                <nav>
-                    <ul>
-                        <li><a href="#about-me" class="active">About me</a></li>
-                        <li><a href="#leerdoelen">Leerdoelen</a>
-                            <ul class="sub-level">
-                                <li><a href="#leerdoelen-initiatief">Initiatief</a></li>
-                                <li><a href="#leerdoelen-meningen-adviezen">Meningen & Adviezen</a></li>
-                                <li><a href="#leerdoelen-ambitie">Ambitie</a></li>
-                                <li><a href="#leerdoelen-bewustheid">Bewustheid</a></li>
-                                <li><a href="#leerdoelen-feedback-zelfreflectie">Feedback & Zelfreflectie</a></li>
-                                <li><a href="#leerdoelen-actief-helpen">Actief helpen</a></li> 
-                            </ul>
-                        </li>
-                        <li><a href="#workshops">Workshops</a>
-                            <ul class="sub-level">
-                                <li><a href="#workshops-smart-me">Smart Me</a></li>
-                                <li><a href="#workshops-smart-business">Smart Business</a></li>
-                                <li><a href="#workshops-smart-technology">Smart Technology</a></li>
-                                <li><a href="#workshops-smart-connection">Smart Connection</a></li>
-                            </ul>
-                        </li>    
-                    </ul>    
-                </nav>   
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio Camiel Nijman</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+
+<body>
+    <div class="nav-container">
+        <header>
+            <a href="Portfolio.html" class="logo">Minor Smart Industry</a>
+            <nav class="menu">
+                <a href="Portfolio-Project.html">Project</a>
+                <a href="#" class="active">Camiel Nijman</a>
+                <a href="Portfolio-Nathan-van-der-Veer.html">Nathan van der Veer</a>
+                <a href="Portfolio-Nena-Renting.html">Nena Renting</a>
+            </nav>
+        </header>
+        <div class="sidenav">
+            <nav>
+                <ul>
+                    <li><a href="#about-me" class="active">About me</a></li>
+                    <li><a href="#leerdoelen">Leerdoelen</a></li>
+                    <li><a href="#competenties">Competenties</a>
+                        <ul class="sub-level">
+                            <li><a href="#competenties-initiatief">Initiatief</a></li>
+                            <li><a href="#competenties-meningen-adviezen">Meningen & Adviezen</a></li>
+                            <li><a href="#competenties-ambitie">Ambitie</a></li>
+                            <li><a href="#competenties-bewustheid">Bewustheid</a></li>
+                            <li><a href="#competenties-feedback-zelfreflectie">Feedback & Zelfreflectie</a></li>
+                            <li><a href="#competenties-actief-helpen">Actief helpen</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#workshops">Workshops</a>
+                        <ul class="sub-level">
+                            <li><a href="#workshops-smart-me">Smart Me</a></li>
+                            <li><a href="#workshops-smart-business">Smart Business</a></li>
+                            <li><a href="#workshops-smart-technology">Smart Technology</a></li>
+                            <li><a href="#workshops-smart-connection">Smart Connection</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+    <div class="main-content">
+        <section id="about-me">
+            <h1>About me</h1>
+            <div class="content">
+                <div class="row-content">
+                    <div class="box-rightimg">
+                        <img src="images/wait_a_minute.jpg" alt="Camiel Nijman" height="250px" width="250px">
+                        <h6>About me</h6>
+                        <blockquote>
+                            <p> 
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat libero quis nibh feugiat malesuada. Duis id est eu orci viverra congue sit amet ut mi. Nullam in est quis enim aliquet bibendum nec ac enim. Sed quis justo ac massa mollis suscipit. Sed id consequat justo. Vivamus sed neque sed turpis ullamcorper luctus vel non massa. In hac habitasse platea dictumst. Proin non justo consequat, tempor elit sit amet, dignissim libero. Donec non ex sit amet dui commodo luctus a eget velit. Sed tincidunt pretium ipsum vel vehicula. Morbi hendrerit justo nec consectetur gravida. Quisque eget enim sit amet justo laoreet luctus ac vitae enim. Maecenas auctor magna eu massa maximus, et tristique odio pharetra. Donec convallis nulla quis nisl tincidunt, ut rhoncus ipsum auctor.
+                            </p>
+                        </blockquote>
+                        <div class="small-box">
+                            <p>
+                                Student: Camiel Nijman
+                                Studentennummer: 
+                                Bachelor: 
+                                Minor: Smart Industry
+                            </p>
+                        </div>
+                    </div>
+                    <div class="box-upperimg">
+                            <a href="images/wait_a_minute.jpg">
+                                <img src="images/wait_a_minute.jpg" alt="Kleurentest" height="200px" width="400px">
+                            </a>
+                        <h6>Kleurentest</h6>
+                        <blockquote>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat libero quis nibh feugiat malesuada. Duis id est eu orci viverra congue sit amet ut mi. Nullam in est quis enim aliquet bibendum nec ac enim. Sed quis justo ac massa mollis suscipit. Sed id consequat justo. Vivamus sed neque sed turpis ullamcorper luctus vel non massa. In hac habitasse platea dictumst. Proin non justo consequat, tempor elit sit amet, dignissim libero. Donec non ex sit amet dui commodo luctus a eget velit. Sed tincidunt pretium ipsum vel vehicula. Morbi hendrerit justo nec consectetur gravida. Quisque eget enim sit amet justo laoreet luctus ac vitae enim. Maecenas auctor magna eu massa maximus, et tristique odio pharetra. Donec convallis nulla quis nisl tincidunt, ut rhoncus ipsum auctor.
+                            </p>
+                        </blockquote>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="main-content">
-            <section id="about-me">
-                <h1>About me</h1>
-                <p>hoi</p>
+        </section>
+        <section id="leerdoelen">
+            <h1>Leerdoelen</h1>
+            <div class="content">
+                <div class="column-content">
+                    <div class="box-onlytext">
+                        <h6>Leerdoel 1</h6>
+                        <blockquote>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat libero quis nibh feugiat malesuada. Duis id est eu orci viverra congue sit amet ut mi. Nullam in est quis enim aliquet bibendum nec ac enim. Sed quis justo ac massa mollis suscipit. Sed id consequat justo. Vivamus sed neque sed turpis ullamcorper luctus vel non massa. In hac habitasse platea dictumst. Proin non justo consequat, tempor elit sit amet, dignissim libero. Donec non ex sit amet dui commodo luctus a eget velit. Sed tincidunt pretium ipsum vel vehicula. Morbi hendrerit justo nec consectetur gravida. Quisque eget enim sit amet justo laoreet luctus ac vitae enim. Maecenas auctor magna eu massa maximus, et tristique odio pharetra. Donec convallis nulla quis nisl tincidunt, ut rhoncus ipsum auctor.
+                            </p>
+                        </blockquote>
+                    </div>
+                    <div class="box-lowerimg">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/bgJ_1WuhUig?si=epCKUhnPRq25SALO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <h6>Leerdoel 2</h6>
+                        <blockquote>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat libero quis nibh feugiat malesuada. Duis id est eu orci viverra congue sit amet ut mi. Nullam in est quis enim aliquet bibendum nec ac enim. Sed quis justo ac massa mollis suscipit. Sed id consequat justo. Vivamus sed neque sed turpis ullamcorper luctus vel non massa. In hac habitasse platea dictumst. Proin non justo consequat, tempor elit sit amet, dignissim libero. Donec non ex sit amet dui commodo luctus a eget velit. Sed tincidunt pretium ipsum vel vehicula. Morbi hendrerit justo nec consectetur gravida. Quisque eget enim sit amet justo laoreet luctus ac vitae enim. Maecenas auctor magna eu massa maximus, et tristique odio pharetra. Donec convallis nulla quis nisl tincidunt, ut rhoncus ipsum auctor.
+                            </p>
+                        </blockquote>
+                    </div>
+                </div>    
+            </div>
+        </section>
+        <section id="competenties">
+            <h1>Competenties</h1>
+            <section id="competenties-initiatief">
+                <h3>Initiatief</h3>
+                <div class="content"></div>
             </section>
-            <section id="leerdoelen">
-                <h1>leerdoelen</h1>
-                <section id="leerdoelen-initiatief">
-                    <h3>Initiatief</h3>
-                </section>
-                <section id="leerdoelen-meningen-adviezen">
-                    <h3>Meningen & Adviezen</h3>
-                </section>
-                <section id="leerdoelen-ambitie">
-                    <h3>Ambitie</h3>
-                </section>
-                <section id="leerdoelen-bewustheid">
-                    <h3>Bewustheid</h3>
-                </section>
-                <section id="leerdoelen-feedback-zelfreflectie">
-                    <h3>Feedback & Zelfreflectie</h3>
-                </section>
-                <section id="leerdoelen-actief-helpen">
-                    <h3>Actief helpen</h3>
-                </section>
+            <section id="competenties-meningen-adviezen">
+                <h3>Meningen & Adviezen</h3>
+                <div class="content"></div>
             </section>
-            <section id="workshops">
-                <h1>Workshops</h1>
-                <section id="workshops-smart-me">
-                    <h3>Smart me</h3>
-                    <p>hoi</p>
-                </section>
-                <section id="workshops-smart-business">
-                    <h3>Smart business</h3>
-                    <p>hoi</p>
-                </section>
-                <section id="workshops-smart-technology">
-                    <h3>Smart technology</h3>
-                    <p>hoi</p>
-                </section>
-                <section id="workshops-smart-connection">
-                    <h3>Smart connection</h3>
-                    <p>hoi</p>
-                </section>
+            <section id="competenties-ambitie">
+                <h3>Ambitie</h3>
+                <div class="content"></div>
             </section>
-        </div>
-        <script src="js/app.js"></script>
-    </body>
+            <section id="competenties-bewustheid">
+                <h3>Bewustheid</h3>
+                <div class="content"></div>
+            </section>
+            <section id="competenties-feedback-zelfreflectie">
+                <h3>Feedback & Zelfreflectie</h3>
+                <div class="content"></div>
+            </section>
+            <section id="competenties-actief-helpen">
+                <h3>Actief helpen</h3>
+                <div class="content"></div>
+            </section>
+        </section>
+        <section id="workshops">
+            <h1>Workshops</h1>
+            <section id="workshops-smart-me">
+                <h3>Smart me</h3>
+                <div class="content"></div>
+            </section>
+            <section id="workshops-smart-business">
+                <h3>Smart business</h3>
+                <div class="content"></div>
+            </section>
+            <section id="workshops-smart-technology">
+                <h3>Smart technology</h3>
+                <div class="content"></div>
+            </section>
+            <section id="workshops-smart-connection">
+                <h3>Smart connection</h3>
+                <div class="content"></div>
+            </section>
+        </section>
+    </div>
+    <script src="js/app.js"></script>
+</body>
 </html>
