--- a/portfolio/Portfolio-Project.html
+++ b/portfolio/Portfolio-Project.html
@@ -4,15 +4,15 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfolio Nena Renting</title>
+        <title>Portfolio Project</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
         <div class="nav-container">
             <header>
-                <a href="index.html" class = "logo">Minor Smart Industry</a>
-                <nav>
-                    <a href="#" class="active">Project</a>
+                <a href="Portfolio.html" class = "logo">Minor Smart Industry</a>
+                <nav class="menu">
+                    <a href="Portfolio-Project.html" class="active">Project</a>
                     <a href="Portfolio-Camiel-Nijman.html">Camiel Nijman</a>
                     <a href="Portfolio-Nathan-van-der-Veer.html">Nathan van der Veer</a>
                     <a href="Portfolio-Nena-Renting.html">Nena Renting</a>
@@ -39,11 +39,33 @@
         <div class="main-content">
             <section id="impact-iot">
                 <h1>About Impact IoT Solutions</h1>
-                <p>hoi</p>
+                <div class="content">
+                    <div class="row-content">
+                        <div class="box-rightimg">
+                            <img src="images/ImpactIot/Impact-logo.png" alt="Impact Iot Solutions" height="250px" width="250px">
+                            <h6>Impact IoT Solutions</h6>
+                            <blockquote>
+                                <p>Impact IoT Solutions is een technologiebedrijf gevestigd in Doetinchem die gebruik maakt van IoT oplossingen om tot kant- en klare slimme producten te komen. Deze producten zijn voornamelijk gericht op de branches rond agro, energietransitie en logistiek. Impact IoT Solutions heeft meerdere projecten uitgevoerd met de studenten van de minor Smart Industry, waaronder een vorig project specifiek bezig is geweest met energietransitie.
+                                </p>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
             </section>
             <section id="project">
                 <h1>About project</h1>
-                <p>hoi</p>
+                <div class="content">
+                    <div class="column-content">
+                        <div class="box-onlytext">
+                            <h6>Box-onlytext</h6>
+                            <blockquote>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat libero quis nibh feugiat malesuada. Duis id est eu orci viverra congue sit amet ut mi. Nullam in est quis enim aliquet bibendum nec ac enim. Sed quis justo ac massa mollis suscipit. Sed id consequat justo. Vivamus sed neque sed turpis ullamcorper luctus vel non massa. In hac habitasse platea dictumst. Proin non justo consequat, tempor elit sit amet, dignissim libero. Donec non ex sit amet dui commodo luctus a eget velit. Sed tincidunt pretium ipsum vel vehicula. Morbi hendrerit justo nec consectetur gravida. Quisque eget enim sit amet justo laoreet luctus ac vitae enim. Maecenas auctor magna eu massa maximus, et tristique odio pharetra. Donec convallis nulla quis nisl tincidunt, ut rhoncus ipsum auctor.
+                                </p>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
             </section>
             <section id="resultaten">
                 <h1>Resultaten</h1>
